# cmake-skeleton

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Main/: CMakeLists.txt
